<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negrito"
    android:orientation="vertical"
    tools:context=".View.Activitys.LoginNativoActivity">

    <include layout="@layout/toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            app:cardBackgroundColor="@color/rojo"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp">

            <EditText
                android:id="@+id/editTextCampoEmail_fragmentloginnativo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/blanco"
                android:textColorHint="@color/blanco" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:cardBackgroundColor="@color/rojo"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp">


            <EditText
                android:id="@+id/editTextCampoContraseña_fragmentloginnativo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:textColor="@color/blanco"
                android:textColorHint="@color/blanco" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/textViewRecuperarContraseña_fragmentloginnativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/olvidaste_tu_contrase_a"
            android:textColor="@color/azul"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewButtonIniciarSesion_fragmentloginnativo"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="49dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/rojo"
                app:cardCornerRadius="4dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/textView_fragmentloginnativo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/iniciar_sesi_n"
                    android:textColor="@color/blanco"
                    android:textSize="24sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewButtonRegistrarse_fragmentloginnativo"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="49dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/rojo"
                app:cardCornerRadius="4dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/registrarse"
                    android:textColor="@color/blanco"
                    android:textSize="24sp" />

            </android.support.v7.widget.CardView>

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>