<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negritoTransparente"
    android:orientation="vertical"
    tools:context=".View.Fragments.ComentariosDeLaNoticiaFragment">

    <android.support.v4.widget.NestedScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="70dp"
            android:paddingBottom="60dp"
            android:background="@color/blanco"
            android:orientation="vertical"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/comentarios"
                android:textColor="@color/negro"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editTextComentarioDelUsuario_fragmentcomentariosdelanoticia"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:gravity="top"
                android:hint="@string/publicar_un_comentario" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewButtonPublicarComentario_fragmentcomentariosdelanoticia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@color/negrito"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:text="@string/publicar"
                    android:textColor="@color/blanco"
                    android:textSize="24sp" />

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textViewCantidadDeComentarios_fragmentcomentariosdelanoticia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/todos_los_comentarios"
                android:textColor="@color/negro"
                android:textSize="20sp" />



            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewListaDeComentariosDeLaNoticia_fragmentcomentariosdelanoticia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
              >

            </android.support.v7.widget.RecyclerView>


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</LinearLayout>


