<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negrito"
    android:orientation="vertical"
    tools:context=".View.Activitys.LoginActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/cardViewButtonInicio_activitylogin"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        app:cardBackgroundColor="@color/rojo"
        app:cardCornerRadius="4dp"
        app:cardElevation="15dp"

        app:cardUseCompatPadding="true">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/iniciar_sesi_n"
            android:textColor="@color/blanco"
            android:textSize="24sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewButtonRegistrarse_activityloginL"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_below="@+id/cardViewButtonInicio_activitylogin"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/rojo"
        app:cardCornerRadius="4dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registrarse"
            android:textColor="@color/blanco"
            android:textSize="24sp" />

    </android.support.v7.widget.CardView>


    <View
        android:layout_width="120dp"
        android:layout_height="3dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:background="@color/blanco">

    </View>

    <View
        android:layout_width="120dp"
        android:layout_height="3dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="30dp"
        android:background="@color/blanco">

    </View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/o"
        android:textColor="@color/blanco"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:orientation="vertical">

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/loginButtonTwitter_activitylogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:layout_margin="10dp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/loginButtonFacebook_activitylogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/loginButtonGoogle_activitylogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp">

        </com.google.android.gms.common.SignInButton>

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewButtonInvitado_activitylogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/rojo"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/continuar_como_invitado"
                android:textColor="@color/blanco"
                android:textSize="18sp" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>