<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:fillViewport="true">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blanco"
        android:orientation="vertical"
        tools:context=".View.Activitys.CrearPosteoActivity">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewUsuario_crearposteoactivity"
                android:layout_width="64dp"
                android:layout_height="64dp" />

            <TextView
                android:id="@+id/textViewNombreDeUsuario_crearposteoactivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/negro"
                android:textSize="15sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextDelPosteo_crearposteoactivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/escrib_algo_que_quiras_compartir_con_la_comunidad"
            android:textColor="@color/negro"
            android:textSize="20sp"
            tools:ignore="InefficientWeight" />

        <ImageView
            android:adjustViewBounds="true"
            android:id="@+id/imageViewPreview_crearposteoactivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:visibility="gone" />

        <VideoView
            android:id="@+id/videoViewPreview_crearposteoactivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/linearLayoutContenedorOpcionAbrirGaleriaFotos_crearposteoacivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/images" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="3dp"
                    android:text="@string/subir_fotos"
                    android:textColor="@color/negro"
                    android:textSize="20sp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/negro" />

            <LinearLayout
                android:id="@+id/linearLayoutContenedorOpcionAbrirGaleriaVideos_crearposteoacivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/videos" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="3dp"
                    android:text="@string/subir_videos"
                    android:textColor="@color/negro"
                    android:textSize="20sp" />


            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/negro" />


            <LinearLayout
                android:id="@+id/linearLayoutContenedorOpcionAbrirCamara_crearposteoactivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/camera" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="3dp"
                    android:text="@string/sacar_fotos"
                    android:textColor="@color/negro"
                    android:textSize="20sp" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>