<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rojo"
    android:orientation="vertical"
    tools:context=".View.Activitys.AccountActivity">

    <include layout="@layout/toolbar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageViewUsuario_activityaccount"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:src="@drawable/cuenta"
        app:civ_border_color="@color/negrito"
        app:civ_border_width="5dp" />


    <TextView
        android:id="@+id/textViewNombreDeUsuario_activityaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/blancomono"
        android:textSize="28sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rojoTrasparente">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewBackgroundMenu_activityaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/cancha" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardViewButtonGuardado_activityaccount"
                    android:layout_width="155dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="4dp"
                    app:cardBackgroundColor="@color/negritoTransparente"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_gravity="center_vertical"
                            android:padding="5dp"
                            android:src="@drawable/like" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/guardado"
                            android:textColor="@color/blanco"
                            android:textSize="20sp" />

                    </LinearLayout>


                </android.support.v7.widget.CardView>
                <!--
                                no se por que esto funciona
                -->

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="2">

                </View>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardViewButtonComentarios_activityaccount"
                    android:layout_width="155dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="4dp"
                    app:cardBackgroundColor="@color/negritoTransparente">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_gravity="center_vertical"
                            android:padding="5dp"
                            android:src="@drawable/comentarios" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="Comentarios"
                            android:textColor="@color/blanco"
                            android:textSize="20sp" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewButtonCerrarSesion_activityaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                app:cardBackgroundColor="@color/negrito"

                app:cardCornerRadius="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/cerrar_sesion"
                    android:textColor="@color/blanco"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewButtonIniciarSesion_activityaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                app:cardBackgroundColor="@color/negrito"

                app:cardCornerRadius="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/iniciar_sesi_n"
                    android:textColor="@color/blanco"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </RelativeLayout>


</LinearLayout>